--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ example/obj
 example/obj/**
 example/bin/*
 !example/bin/data
-exampleWithGui/bin/*
+exampleWithGui/bin/data/*.xml
+!exampleWithGui/bin/data/settings_example.xml
