--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ example/bin/*
 exampleWithGui/bin/data/*.xml
 !exampleWithGui/bin/data/settings_example.xml
 
-exampleWithGUI/*.xcuserstate
+exampleWithGUI/**/*.xcuserstate
 
-exampleWithGUI/*.xcbkptlist
+exampleWithGUI/**/*.xcbkptlist
 
